--- a/frontend/src/components/Home/home.css
+++ b/frontend/src/components/Home/home.css
@@ -118,6 +118,7 @@ body {
     background-color: #f4f4f4;
     border-radius: 10px;
     margin-bottom: 30px;
+    margin-right: 20px;
 }
 
 .feature-icon {
