--- a/frontend/src/pages/Admin/UsersPage/UserPage.css
+++ b/frontend/src/pages/Admin/UsersPage/UserPage.css
@@ -1,5 +1,82 @@
-.main-content {
+.admin-dashboard {
+    display: flex;
+  }
+  
+  .main-content {
     flex-grow: 1;
     padding: 20px;
-}
+  }
+  
+  .users-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+  }
+  
+  .users-table th, .users-table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+  }
+  
+  .users-table th {
+    background-color: #f4f4f4;
+  }
+  
+  .users-table tr:nth-child(even) {
+    background-color: #f9f9f9;
+  }
+  
+  .users-table tr:hover {
+    background-color: #e9e9e9;
+  }
+  
+  .users-table td {
+    color: black;
+  }
 
+  .map-button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 6px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+  }
+  
+  .map-button:hover {
+    background-color: #45a049;
+  }
+  
+
+  .search-input {
+    margin-bottom: 20px;
+    padding: 8px;
+    width: 100%;
+    max-width: 400px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .report-section {
+    margin-left: 120px;
+  }
+  
+  .report-section .btn {
+    padding: 10px 15px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    text-decoration: none;
+  }
+  
+  .report-section .btn:hover {
+    background-color: #0056b3;
+  }
+  
