--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 /* Footer Styles */
 .footer {
-    background-color: #5DBB63;
+    background-color: #2a9d8f;
     color: #fff;
     padding: 2rem 1rem;
     text-align: center;
