--- a/frontend/src/pages/Admin/AdminDashBoard.css
+++ b/frontend/src/pages/Admin/AdminDashBoard.css
@@ -94,6 +94,7 @@
     padding: 20px;
     margin: 20px 0; /* Margin for spacing */
     text-align: center; /* Center the text */
+    width: 20%;
   }
   
   .user-count-card h2 {
@@ -105,3 +106,7 @@
     font-weight: bold; /* Bold font for emphasis */
   }
   
+
+  .user-count-card:hover {
+    box-shadow: 0 4px 8px 0 rgba(51, 177, 231, 0.2), 0 6px 20px 0 rgba(87, 235, 99, 0.63);
+  }
