--- a/frontend/src/pages/Admin/WasteCollection/UpdateDateModal.css
+++ b/frontend/src/pages/Admin/WasteCollection/UpdateDateModal.css
@@ -43,28 +43,27 @@
     color: #d9534f; /* Darker red on hover */
 }
 
-.modal-content button {
-    margin-top: 10px;
+.modal-content label {
+    display: block;
+    margin-bottom: 15px; /* Add space between label and select */
+}
+
+.button-container {
+    margin-top: 20px; /* Space above the update button */
+}
+
+.update-button {
+    background-color: rgb(9, 40, 219); /* Blue background for update button */
+    color: white; /* White text for update button */
+    font-family: Arial, Helvetica, sans-serif;
     padding: 10px;
-    cursor: pointer;
-    background-color: #ffffff; /* Green background for update button */
-    color: rgb(0, 0, 0); /* White text for update button */
     border: none; /* Remove border */
     border-radius: 5px; /* Rounded corners */
+    cursor: pointer; /* Pointer cursor on hover */
+    width: 100%; /* Full width */
 }
 
-.modal-content button:hover {
-    background-color: rgba(0, 0, 0, 0.2); /* Darker green on hover */
-}
-
-.modal-content .update-button{
-    background-color: rgb(9, 40, 219);
+.update-button:hover {
+    background-color: rgb(12, 35, 164); /* Darker blue on hover */
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.modal-content .update-button:hover{
-    background-color: rgb(12, 35, 164);
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
 }
