--- a/frontend/src/pages/Support/reportIssue.css
+++ b/frontend/src/pages/Support/reportIssue.css
@@ -1,7 +1,141 @@
-.report-home {
+.support-home {
     padding-top: 70px;
 }
 
 .ticketContainer {
-    margin: 200px;
+    margin: 150px;
 }
+
+/* SupportTicketForm Styles */
+.support-ticket-container {
+    width: 100%;
+    max-width: 500px;
+    margin-top: 100px;
+    margin: auto;
+    padding: 20px;
+    text-align: center;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.support-ticket-container h2 {
+    width: '100%'; 
+    height: '100%';
+    text-align: 'center';
+    color: 'black';
+    font-size: 64;
+    font-family: 'Inter';
+    font-weight: '700';
+    text-transform: 'capitalize';
+    letter-spacing: 2.56;
+    word-wrap: 'break-word'
+}
+
+.support-ticket-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.support-ticket-form label {
+    font-size: 16px;
+    margin-bottom: 8px;
+    color: #555;
+}
+
+.support-ticket-form select,
+.support-ticket-form textarea,
+.support-ticket-form input {
+    padding: 10px;
+    font-size: 14px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.support-ticket-form textarea {
+    min-height: 100px;
+    resize: none;
+}
+
+.support-ticket-form button {
+    padding: 10px;
+    font-size: 16px;
+    background-color: #28a745;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.support-ticket-form button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
+.support-ticket-message {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 14px;
+    color: #1db667;
+}
+
+/* Basic table styles */
+table {
+    width: 90%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+th, td {
+    padding: 12px;
+    border: 1px solid #ddd;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+/* Responsive design */
+@media (max-width: 768px) {
+    table {
+        display: block;
+        overflow-x: auto;
+        white-space: nowrap;
+    }
+
+    th, td {
+        display: block;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    th {
+        background-color: #f2f2f2;
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
+    }
+
+    td {
+        border: none;
+        padding-left: 50%;
+        position: relative;
+    }
+
+    td::before {
+        content: attr(data-label);
+        position: absolute;
+        left: 0;
+        width: 45%;
+        padding-left: 15px;
+        font-weight: bold;
+        white-space: nowrap;
+    }
+}
+
