--- a/frontend/src/pages/Admin/AdminDashBoard.css
+++ b/frontend/src/pages/Admin/AdminDashBoard.css
@@ -88,7 +88,7 @@
   }
 
   .user-count-card {
-    background-color: #f8f9fa; /* Light background */
+    background-color: #f4f4f4; /* Light background */
     border: 1px solid #ced4da; /* Border color */
     border-radius: 8px; /* Rounded corners */
     padding: 20px;
