--- a/frontend/src/pages/UserHome/UserHome.css
+++ b/frontend/src/pages/UserHome/UserHome.css
@@ -9,7 +9,7 @@
     max-width: 50px;
 }
 
-.nav-link-custom {
+.nav-items .nav-link-custom {
     color: white;
     margin-right: 20px;
     font-size: 1rem;
@@ -17,7 +17,7 @@
     text-transform: uppercase; /* Make nav links stand out */
 }
 
-.nav-link-custom:hover {
+.nav-items .nav-link-custom:hover {
     color: #f0f0f0;
 }
 
