--- a/frontend/src/pages/Payment/Payment.css
+++ b/frontend/src/pages/Payment/Payment.css
@@ -1,67 +1,82 @@
-/* Modal Overlay */
-.modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.5); /* Black overlay with transparency */
+.admin-dashboard {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    overflow: hidden;
-}
-
-/* Modal Content */
-.modal-content {
-    background-color: #fff;
+  }
+  
+  .main-content {
+    flex-grow: 1;
     padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    position: relative;
-    width: 90%;
-    max-width: 500px;
-    z-index: 1001;
-}
-
-/* Close Button */
-.close-modal {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    font-size: 24px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-/* Optional Styling for Form Inputs */
-.payment-form div {
-    margin-bottom: 15px;
-}
-
-.payment-form label {
-    display: block;
-    margin-bottom: 5px;
-}
-
-.payment-form input,
-.payment-form select {
+  }
+  
+  .users-table {
     width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+  }
+  
+  .users-table th, .users-table td {
+    border: 1px solid #ddd;
     padding: 8px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-}
+    text-align: left;
+  }
+  
+  .users-table th {
+    background-color: #f4f4f4;
+  }
+  
+  .users-table tr:nth-child(even) {
+    background-color: #f9f9f9;
+  }
+  
+  .users-table tr:hover {
+    background-color: #e9e9e9;
+  }
+  
+  .users-table td {
+    color: black;
+  }
 
-.payment-form button {
+  .map-button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 6px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+  }
+  
+  .map-button:hover {
+    background-color: #45a049;
+  }
+  
+
+  .search-input {
+    margin-bottom: 20px;
+    padding: 8px;
+    width: 100%;
+    max-width: 400px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .report-section {
+    margin-left: 120px;
+  }
+  
+  .report-section .btn {
     padding: 10px 15px;
     background-color: #007bff;
     color: white;
     border: none;
     border-radius: 4px;
-    cursor: pointer;
-}
-
-.payment-form button:hover {
+    text-decoration: none;
+  }
+  
+  .report-section .btn:hover {
     background-color: #0056b3;
-}
+  }
+  
